syntax = "proto3";

package steve.proto.gaterpc;


message Header {
    uint32 msg_id = 1;
    uint64 player_id = 2;
}

// 客户端消息
message ClientMessage {
    // 客户端 ID
    uint64 client_id = 1;
    // 消息头
    Header header = 3;
    // 消息内容
    bytes request_data = 4;
}

// ResponseMessage 回复消息
message ResponseMessage {
    Header header = 1;  // 消息头
    bytes body = 2;     // 消息体
}

// 处理结果
message HandleResult {
    // 回复数据， 长度为空时则不需要回复
    repeated ResponseMessage responses = 1; 
}

// 消息处理器
service MessageHandler {
    rpc HandleClientMessage(ClientMessage) returns (HandleResult) {}
}


// 消息发送请求
message SendMessageRequest {
    // 客户端 ID 列表
    repeated uint64 client_id = 1;

    // 消息头
    Header header = 2;

    // 消息内容
    bytes data = 3;
}

// 消息发送结果
message SendMessageResult {
    // 是否发送成功
    bool ok = 2;
}

// 消息发送器
service MessageSender {
    rpc SendMessage(SendMessageRequest) returns (SendMessageResult){}
}